# resume-matcher

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 91f0b5717422_create_resumes_and_jobs_tables.py
src/resume_matcher/: __init__.py  main.py
src/resume_matcher/api/: deps.py
src/resume_matcher/api/v1/: jobs.py  matches.py  resumes.py  router.py
src/resume_matcher/core/: config.py  database.py
src/resume_matcher/models/: __init__.py  job.py  resume.py
src/resume_matcher/schemas/: __init__.py  job.py  match.py  resume.py
src/resume_matcher/services/: __init__.py  embedding_service.py  job_service.py  match_service.py  pdf_service.py  resume_service.py
tests/: conftest.py
tests/test_api/: test_health.py  test_jobs.py  test_resumes.py
tests/test_services/: test_embedding_service.py  test_pdf_service.py
